--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,5 @@
 <p>paragraph in index1</p>
 <p>kldjfldas;fjklds</p>
 <span>dlskfjldsa;jlfdsgit </span>
-<p>Technologies</p>
+<p>BonBLOC</p>
+<p>VISHNU</p>
