--- a/index1.html
+++ b/index1.html
@@ -3,6 +3,6 @@
 
 <p>lorem dfsajdlksfjdslakjlfd</p>
 <p>Nithin</p>
-<p>Maurikaa</p>
+<p>Pavan</p>
 <p>dei madurai bye daaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
 
