--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,11 @@
 <p>paragraph in index1</p>
 <p>kldjfldas;fjklds</p>
 <span>dlskfjldsa;jlfdsgit </span>
+<p>lorem dfsajdlksfjdslakjlfd</p>
+<p>Nithin</p>
+<p>Maurikaa</p>
+<p>
+  dei madurai bye
+  daaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+</p>
+<h1>final merging</h1>
