--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <p>Nithin</p>
 <p>Maurikaa</p>
 <p>
-  dei madurai bye
+  7th line
   daaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 </p>
 <h1>last merging</h1>
