--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
 <p>Maurikaa</p>
 <p>
   7th line
-  daaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+  8th line
 </p>
 <h1>last merging</h1>
 <h2>only in feature</h2>
